Section 508 Fix for Custom Hides +
-- Added role="alert" to custom hide /show components HTML, in jQuery for hide /show button parents
-- Fix for 2nd Modal in statement_of_use.html
-- Suggested solution for initial page load change requ. (test) in amend_mark_ROA_optional.html

--- a/additional_information.html
+++ b/additional_information.html
@@ -219,7 +219,7 @@
                                               <label for="inlineRadio046" class="radio-inline radiocontainer">No<input type="radio" name="uncommoninfo" id="inlineRadio046" value="no" tabindex="0"><span class="checkmark"></span></label>
                                             </div><!--END radiogroup-->
                                             <!--Start Dropzone-->
-                                            <div id="yesnotpreviously" class="upload">
+                                            <div id="yesnotpreviously" class="upload" role="alert">
                                                 <label for="ta8" class="weight600">Provide the additional information.</label> 
                                                 <textarea id="ta8" rows="3" class="form-control"></textarea>
                                                 <p class="weight600 form-group form-group-md">Optional upload.</p>
@@ -281,7 +281,7 @@
                                         </section>
                                    	</div>
                                 </div><!--END rare uncommon-->
-                                <div class="row" id="tr">
+                                <div class="row" id="tr" role="alert">
                                     <div class="col-sm-12">
                                         <section aria-label="Type of Register">
                                             <div class="card-text">
@@ -311,7 +311,7 @@
                                         </section>
                                     </div>
                                 </div><!--END register-->
-                                <div class="row" id="cad">
+                                <div class="row" id="cad" role="alert">
                                     <div class="col-xs-12">
                                         <section aria-label="distinctiveness">
                                             <fieldset aria-labelledby="distinctiveness">
@@ -331,20 +331,20 @@
                                                       <label for="inlineRadio033" class="radio-inline radiocontainer">Yes<input type="radio" name="distinctradio" id="inlineRadio033" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                       <label for="inlineRadio034" class="radio-inline radiocontainer">No<input type="radio" name="distinctradio" id="inlineRadio034" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                 	</div><!--END radiogroup-->
-                                                <div id="yesdistict" class="form-group"><!--toggle 'yes' radio-->
+                                                <div id="yesdistict" class="form-group" role="alert"><!--toggle 'yes' radio-->
                                                     <div class="form-group form-group-md">
                                                         <p id="wholepart">Is this for the whole mark, or part of the mark?</p>
                                                         <div role="radiogroup" aria-labelledby="wholepart" class="form-group form-group-md">
                                                           <label for="inlineRadio035" class="radio-inline radiocontainer">Whole<input type="radio" name="wholepartradio" id="inlineRadio035" value="whole" tabindex="0"><span class="checkmark"></span></label>
                                                           <label for="inlineRadio036" class="radio-inline radiocontainer">In part<input type="radio" name="wholepartradio" id="inlineRadio036" value="inpart" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
-                                                        <div id="yespart" class="form-group"><!--toggle 'yes' radio-->
+                                                        <div id="yespart" class="form-group" role="alert"><!--toggle 'yes' radio-->
                                                             <div class="form-group form-group-md">
                                                                 <label for="partmark" class="weight600">Which part of the mark?</label> 
                                                                 <textarea id="partmark" rows="1" class="form-control"></textarea>
                                                             </div>
                                                         </div>
-                                                        <div id="yeswhole" class="form-group"><!--toggle 'yes' radio-->
+                                                        <div id="yeswhole" class="form-group" role="alert"><!--toggle 'yes' radio-->
                                                             <div class="form-group form-group-md">
                                                                 <p id="claimbase">What is your claim based on?</p>
                                                                 <div role="radiogroup" aria-labelledby="claimbase" class="form-group form-group-md">
@@ -362,7 +362,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div id="yesevidence" class="form-group upload">
+                                                        <div id="yesevidence" class="form-group upload" role="alert">
                                                             <p class="weight600" role="heading" aria-level="3">Upload evidence.</p>
                                                             <div class="form-group form-group-md hidethis">
                                                                 <label class="small upload-drop-zone" for="filetwo"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select file</div></label>
@@ -383,7 +383,7 @@
                                                                 </div>
                                                             </div>
                                                         </div><!-- Drop Zone -->
-                                                        <div class="row" id="yespriors">
+                                                        <div class="row" id="yespriors" role="alert">
                                          					<div class="col-xs-12">
                                                                 <div class="row reg">
                                                                     <div class="form-group form-group-md col-xs-9 col-sm-10"><!--toggle 'yes' radio-->
@@ -413,7 +413,7 @@
                                     </section>
                                 </div>
                             </div><!--END distinctiveness-->
-                            <div class="row" id="uaf">
+                            <div class="row" id="uaf" role="alert">
                                 <div class="col-sm-12">
                                     <section aria-label="Use in Another Form">
                                         <fieldset aria-labelledby="otherform">
@@ -426,20 +426,20 @@
                                                   <label for="inlineRadio040" class="radio-inline radiocontainer">Yes<input type="radio" name="formradio" id="inlineRadio040" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                   <label for="inlineRadio041" class="radio-inline radiocontainer">No<input type="radio" name="formradio" id="inlineRadio041" value="no" tabindex="0"><span class="checkmark"></span></label>
                                             	</div><!--END radiogroup-->
-                                                <div id="yesotherform" class="form-group"><!--toggle 'yes' radio-->
+                                                <div id="yesotherform" class="form-group" role="alert"><!--toggle 'yes' radio-->
                                                     <div class="form-group form-group-md">
                                                         <p>Is this for the whole mark, or part of the mark?</p>
                                                         <div role="radiogroup" aria-labelledby="disclm" class="form-group form-group-md">
                                                           <label for="inlineRadio042" class="radio-inline radiocontainer">Whole<input type="radio" name="wholepartradiothree" id="inlineRadio042" value="whole" tabindex="0"><span class="checkmark"></span></label>
                                                           <label for="inlineRadio043" class="radio-inline radiocontainer">In part<input type="radio" name="wholepartradiothree" id="inlineRadio043" value="inpart" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
-                                                        <div id="yespartother" class="form-group"><!--toggle 'yes' radio-->
+                                                        <div id="yespartother" class="form-group" role="alert"><!--toggle 'yes' radio-->
                                                             <div class="form-group form-group-md">
                                                                 <label for="partmark">Which part of the mark?</label> 
                                                                 <textarea id="partmark" rows="1" class="form-control"></textarea>
                                                             </div>
                                                         </div>
-                                                        <div id="yeswholeother" class="form-group"><!--toggle 'yes' radio-->
+                                                        <div id="yeswholeother" class="form-group" role="alert"><!--toggle 'yes' radio-->
                                                             <div class="form-group form-group-md">
                                                                 <div class="row">
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
@@ -460,7 +460,7 @@
                                     </section>
                                 </div>
                             </div><!--END use in another form-->
-                            <div class="row" id="cc">
+                            <div class="row" id="cc" role="alert">
                                 <div class="col-xs-12">
                                     <section aria-label="Concurrent Use">
                                         <fieldset aria-labelledby="concurrent">
@@ -486,7 +486,7 @@
                                                     </div><!--END radiogroup-->
                                                 </div>
                                             </div><!--end checkbox row-->
-                                            <div class="row" id="hideshowconcurrentuses_courtd">
+                                            <div class="row" id="hideshowconcurrentuses_courtd" role="alert">
                                                   <!--Start Dropzone-->
                                                   <div class="col-xs-12 form-group form-group-md">
                                                   		<div class="row">
@@ -621,7 +621,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="row" id="hideshowconcurrentuses_ttab">
+                                                <div class="row" id="hideshowconcurrentuses_ttab" role="alert">
                                                   <!--Start Dropzone-->
                                                   <div class="col-xs-12 form-group form-group-md">
                                                   	<div class="row">
@@ -760,7 +760,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="row" id="hideshowconcurrentuses_conflictingreg">
+                                            <div class="row" id="hideshowconcurrentuses_conflictingreg" role="alert">
                                               <!--Start Dropzone-->
                                                 <div class="col-xs-12 form-group form-group-md">
                                                     <div class="row">
@@ -895,7 +895,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="row" id="hideshowconcurrentuses_earlieruse">
+                                                    <div class="row" id="hideshowconcurrentuses_earlieruse" role="alert">
                                                       <!--Start Dropzone-->
                                                       <div class="col-xs-12 form-group form-group-md">
                                                         <div class="row">
