--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -249,7 +249,7 @@
                                                             <label for="inlineRadio057" class="radio-inline radiocontainer block"><input type="radio" class="yesone" name="numberspecimen" id="inlineRadio057" value="yes" tabindex="0"><span class="checkmark"></span>One specimen for all the goods/services within this class.</label>
                                                             <label for="inlineRadio058" class="radio-inline radiocontainer block"><input type="radio" class="yesoneeach" name="numberspecimen" id="inlineRadio058" value="no" tabindex="0"><span class="checkmark"></span>One specimen for each good/service within this class.</label>
                                                         </div><!--END radiogroup-->
-                                                        <div class="row form-group form-group-md yesonespecimen"><!--toggle 'yes' radio-->
+                                                        <div class="row form-group form-group-md yesonespecimen" role="alert"><!--toggle 'yes' radio-->
                                                             <div class="col-xs-12 form-group form-group-md upload">
                                                                 <p id="upimage">Provide an image of your specimen:</p>
                                                                 <div>
@@ -293,7 +293,7 @@
                                                             <label for="inlineRadio25" class="radio-inline radiocontainer"><input type="radio" name="commerceadio" id="inlineRadio25" value="yesbar" tabindex="0"><span class="checkmark"></span>Yes</label>
                                                             <label for="inlineRadio26" class="radio-inline radiocontainer"><input type="radio" name="commerceadio" id="inlineRadio26" value="nobar" tabindex="0"><span class="checkmark"></span>No</label>
                                                         </div><!--END radiogroup-->
-                                                        <div class="row form-group form-group-md yescommerce"><!--toggle 'yes' radio-->
+                                                        <div class="row form-group form-group-md yescommerce" role="alert"><!--toggle 'yes' radio-->
                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                 <label for="connectiondateone" class="matchlabelheighttwo">When did you first use the mark in connection with the goods/services? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used with the goods or services." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduced Fee</span></label>
                                                                 <input type="date" class="form-control" id="connectiondateone" name="connectiondateone">
@@ -302,11 +302,11 @@
                                                                 <label for="firstconnection-date" class="matchlabelheighttwo">When did you first use the mark in Commerce? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used in commerce, such as commerce between states or between the United States and another country." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduced Fee</span></label>
                                                                 <input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate">
                                                             </div>
-                                                            <div class="col-xs-12 form-group form-group-md individualspecimen">
+                                                            <div class="col-xs-12 form-group form-group-md individualspecimen" role="alert">
                                                                 <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenseven" tabindex="0" aria-labelledby="individualspecimen_1" id="">
                                                                 <label class="form-check-label form-check" for="" id="individualspecimen_1"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
-                                                            <div class="form-group form-group-md yesspecimen"><!--toggle 'yes' radio-->
+                                                            <div class="form-group form-group-md yesspecimen" role="alert"><!--toggle 'yes' radio-->
                                                                 <div class="col-xs-12 upload">
                                                                     <p id="upimagetwo">Provide an image of your specimen:</p>
                                                                     <div class="form-group form-group-md hidethis">
@@ -343,7 +343,7 @@
                                                                 <label class="form-check-label form-check" for="natwo_basisone"><span class="radio notspecial" id="notapptwo">Not applicable</span></label>
                                                             </div>
                                                             <div class="col-xs-12">
-                                                                <div class="row holdsapending" aria-labelledby="foreignapplication">
+                                                                <div class="row holdsapending" aria-labelledby="foreignapplication" role="alert">
                                                                     <div class="col-xs-12 visuallyremoved resetreg">
                                                                         <button type="button" class="btn btn-sm close resetregbtn" aria-label="remove this additional foreign registration"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                                                                     </div>
@@ -389,7 +389,7 @@
                                                                 </div>
                                                             </div>
                                                             <div class="col-xs-12">
-                                                                <div class="row holdsaforeign">
+                                                                <div class="row holdsaforeign" role="alert">
                                                                     <div class="col-xs-12 visuallyremoved resetreg">
                                                                         <button type="button" class="btn btn-sm close resetregbtn" aria-label="remove this additional foreign registration"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                                                                     </div>
@@ -471,7 +471,7 @@
                                                             <label for="inlineRadio29" class="radio-inline radiocontainer"><input type="radio" name="commerceadiotwo" id="inlineRadio29" value="yesliquid" tabindex="0"><span class="checkmark"></span>Yes</label>
                                                             <label for="inlineRadio30" class="radio-inline radiocontainer"><input type="radio" name="commerceadiotwo" id="inlineRadio30" value="noliquid" tabindex="0"><span class="checkmark"></span>No</label>
                                                         </div><!--END radiogroup-->
-                                                        <div class="row form-group form-group-md yesconnection"><!--toggle 'yes' radio-->
+                                                        <div class="row form-group form-group-md yesconnection" role="alert"><!--toggle 'yes' radio-->
                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                 <label for="connection-date" class="matchlabelheighttwo">When did you first use the mark in connection with the goods/services? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used with the goods or services." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduced Fee</span></label>
                                                                 <input type="date" class="form-control" id="connection-date" name="connectiondate" value="">
@@ -480,11 +480,11 @@
                                                                 <label for="firstconnection-date" class="matchlabelheighttwo">When did you first use the mark in Commerce? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used in commerce, such as commerce between states or between the United States and another country." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduced Fee</span></label>
                                                                 <input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value="">
                                                             </div>
-                                                            <div class="col-xs-12 form-group form-group-md individualspecimen">
+                                                            <div class="col-xs-12 form-group form-group-md individualspecimen" role="alert">
                                                                 <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimeneight" tabindex="0" aria-labelledby="individualspecimen_2" id="">
                                                                 <label class="form-check-label form-check" for="" id="individualspecimen_2"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
-                                                            <div class="form-group form-group-md yesspecimen"><!--toggle 'yes' radio-->
+                                                            <div class="form-group form-group-md yesspecimen" role="alert"><!--toggle 'yes' radio-->
                                                                 <div class="col-xs-12 upload">
                                                                     <p id="upimagefour">Provide an image of your specimen:</p>
                                                                     <div class="form-group form-group-md hidethis">
@@ -521,7 +521,7 @@
                                                                 <label class="form-check-label form-check" for="natwo_basistwo" id="notapptwo"><span class="radio notspecial">Not applicable</span></label>
                                                             </div>
                                                             <div class="col-xs-12">
-                                                                <div class="row holdsapending" aria-labelledby="foreignapplication">
+                                                                <div class="row holdsapending" aria-labelledby="foreignapplication" role="alert">
                                                                     <div class="col-xs-12 visuallyremoved resetreg">
                                                                         <button type="button" class="btn btn-sm close resetregbtn" aria-label="remove this additional foreign registration"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                                                                     </div>
@@ -566,7 +566,7 @@
                                                                 </div>
                                                             </div>
                                                             <div class="col-xs-12">
-                                                                <div class="row holdsaforeign">
+                                                                <div class="row holdsaforeign" role="alert">
                                                                     <div class="col-xs-12 visuallyremoved resetreg">
                                                                         <button type="button" class="btn btn-sm close resetregbtn" aria-label="remove this additional foreign registration"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                                                                     </div>
