--- a/owner_info_M1.html
+++ b/owner_info_M1.html
@@ -245,7 +245,7 @@
                                     <script type="application/javascript" src="js/accordion.js"></script>
                                     <script type="application/javascript" src="js/checkbox.js"></script>
                                     <script type="application/javascript" src="js/btn_checkbox.js"></script>
-                                    <div id="yesusentity" role="region" aria-labelledby="usforeign">
+                                    <div id="yesusentity" role="region alert" aria-labelledby="usforeign">
                                         <fieldset aria-labelledby="entitytype">
                                             <div class="row">
                                               <div class="form-group form-group-md col-xs-6">
@@ -276,7 +276,7 @@
                                         </fieldset><!--END US Owner Information-->
                                     </div><!--END US owner toggle area-->
                                     
-                                    <div id="yesforeignentity" role="region" aria-labelledby="usforeign">
+                                    <div id="yesforeignentity" role="region alert" aria-labelledby="usforeign">
                                         <fieldset aria-labelledby="entitytype">
                                             <div class="row">
                                               <div class="form-group form-group-md col-xs-12 col-lg-6">
@@ -291,7 +291,7 @@
                                               </div>
                                               <div class="form-group form-group-md col-xs-12 col-lg-6" id="switchselect">
                                               	<div class="row">
-                                                    <div class="col-xs-12 albaniaform">
+                                                    <div class="col-xs-12 albaniaform" role="alert">
                                                         <label for="entypeforeignalbania">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                         <select class="form-control" id="entypeforeignalbania">
                                                           <option value="Select">Select</option>
@@ -299,7 +299,7 @@
                                                           <option value="liabilitco">Limited Liability Company</option>
                                                         </select>
                                                     </div>
-                                                    <div class="col-xs-12 algeriaform">
+                                                    <div class="col-xs-12 algeriaform" role="alert">
                                                         <label for="entypeforeignalgeria">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                         <select class="form-control" id="entypeforeignalgeria">
                                                           <option value="Select">Select</option>
@@ -310,7 +310,7 @@
                                                           <option value="publiclimited">Public Limited Company</option>
                                                         </select>
                                                     </div>
-                                                    <div class="col-xs-12 angolaform">
+                                                    <div class="col-xs-12 angolaform" role="alert">
                                                         <label for="entypeforeignangola">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                         <select class="form-control" id="entypeforeignalgeria">
                                                           <option value="Select">Select</option>
@@ -321,7 +321,7 @@
                                                           <option value="publiclimited">Public Limited Company</option>
                                                         </select>
                                                     </div>
-                                                    <div class="col-xs-12 bahamasform">
+                                                    <div class="col-xs-12 bahamasform" role="alert">
                                                         <label for="entypeforeignbahamas">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                         <select class="form-control" id="entypeforeignbahamas">
                                                           <option value="Select">Select</option>
@@ -338,7 +338,7 @@
                                              	</div>
                                              </div>
                                          </div>
-                                        <div class="col-xs-12">
+                                        <div class="col-xs-12" role="alert">
                                             <button type="button" class="btn-sm btn-success fill" id="autofillforeign">Fill from contacts</button>
                                         </div>
                                         <div class="row">
