--- a/petition_torevive_ROA_S2_(2month-1stclaim_final).html
+++ b/petition_torevive_ROA_S2_(2month-1stclaim_final).html
@@ -287,7 +287,7 @@
                                                 <label for="inlineRadio079" class="radio-inline radiocontainer"><input type="radio" name="actionradio" id="inlineRadio079" value="noreceived" tabindex="0"><span class="checkmark"></span>No</label>
                                             </div>
                                         </fieldset>
-                                        <div id="reviveappform">
+                                        <div id="reviveappform" role="alert">
                                             <fieldset aria-label="select signature method.">
                                                 <div class="card-text noexpand">
                                                     <h2 class="card-title weight600">Petition&#8217;s Signature</h2>
@@ -340,7 +340,7 @@ of your application?</p>
                                                     <label for="inlineRadio081" class="radio-inline radiocontainer"><input type="radio" name="reconsideradio" id="inlineRadio081" value="norecon" tabindex="0"><span class="checkmark"></span>No</label>
                                                 </div>
                                             </fieldset>
-                                            <div id="reconsideration">
+                                            <div id="reconsideration" role="alert">
                                                 <fieldset aria-label="reconsideration">
                                                     <div class="card-text noexpand">
                                                         <h2 class="card-title weight600">Request for Reconsideration</h2>
@@ -399,7 +399,7 @@ of your application?</p>
                                                     </div>
                                                 </fieldset>
                                             </div>
-                                            <div id="noreconsideration">
+                                            <div id="noreconsideration" role="alert">
                                                 <fieldset aria-label="I want to request ttab reconsideration" id="ttabreq">
                                                 	<div class="card-text noexpand">
                                                         <h2 class="card-title weight600" aria-labelledby="ttabreq">Appeal to TTAB</h2>
@@ -463,7 +463,7 @@ of your application?</p>
                                                     </div>
                                                 </fieldset>
                                             </div>
-                                            <div id="yesttabreconsideration">
+                                            <div id="yesttabreconsideration" role="alert">
                                                 <fieldset aria-label="I want to file a ttab appeal">
                                                 	<div class="card-text noexpand">
                                                         <h2 class="card-title weight600" aria-labelledby="ttabreq">Appeal to TTAB</h2>
@@ -519,7 +519,7 @@ of your application?</p>
                                                     </div>
                                                 </fieldset>
                                             </div>
-                                            <div id="nottabreconsideration">
+                                            <div id="nottabreconsideration" role="alert">
                                                 <fieldset aria-label="I don't want to file a ttab appeal">
                                                 	<p class="weight600">Please acknowledge the following statement:</p>
                                                     <div class="form-group form-group-md">
