--- a/petition_torevive_SOU_S1_(2months-noexten).html
+++ b/petition_torevive_SOU_S1_(2months-noexten).html
@@ -292,8 +292,8 @@
                                                 <label for="inlineRadio0103" class="radio-inline radiocontainer"><input type="radio" name="actionradio" id="inlineRadio0103" value="noreceived" tabindex="0"><span class="checkmark"></span>No</label>
                                             </div>
                                         </fieldset>
-                                        <div id="reviveappform">
-                                            <div id="requestnoa">
+                                        <div id="reviveappform" role="alert">
+                                            <div id="requestnoa" role="alert">
                                                 <fieldset aria-label="request new notice of allowance">
                                                 <p class="weight600" id="reqnoa">Would you like UPSTO to issue a new Notice of Allowance?</p>
                                                     <div role="radiogroup" class="form-group form-group-md" aria-describedby="reqnoa">
@@ -302,7 +302,7 @@
                                                     </div>
                                                 </fieldset>
                                             </div>
-                                            <div id="expedite">
+                                            <div id="expedite" role="alert">
                                                 <fieldset aria-label="select petition signature method">
                                                     <div class="card-text noexpand">
                                                         <h2 class="card-title weight600">Petition&#8217;s Signature</h2>
@@ -346,7 +346,7 @@
                                                     </div>
                                                 </fieldset>
                                             </div><!--//expedite-->
-                                            <div id="fees">
+                                            <div id="fees" role="alert">
                                                 <fieldset aria-label="fees agreement">
                                                 <p class="weight600" id="agreefee">Do you want to file a Statement of Use with the fees for the missing Extension Request that must be filed directly within this form?</p>
                                                     <div role="radiogroup" class="form-group form-group-md" aria-describedby="agreefee">
@@ -355,7 +355,7 @@
                                                     </div>
                                                 </fieldset>
                                             </div>
-                                            <div id="xreq">
+                                            <div id="xreq" role="alert">
                                                 <fieldset aria-label="file a request for extension">
                                                     <div class="card-text noexpand">
                                                         <h2 class="card-title weight600">Extension Request</h2>
@@ -367,7 +367,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div id="souquestion">
+                                                    <div id="souquestion" role="alert">
                                                         <p class="weight600" id="filesou">Did you want to file a Statement of Use?</p>
                                                         <div role="radiogroup" class="form-group form-group-md" aria-describedby="filesou">
                                                             <label for="inlineRadio0106" class="radio-inline radiocontainer"><input type="radio" name="souradio" id="inlineRadio0106" value="yesou" tabindex="0"><span class="checkmark"></span>Yes</label>
