--- a/petition_torevive_SOU_S2_(within6month-noexten).html
+++ b/petition_torevive_SOU_S2_(within6month-noexten).html
@@ -291,7 +291,7 @@
                                                 <label for="inlineRadio097" class="radio-inline radiocontainer"><input type="radio" name="actionradio" id="inlineRadio097" value="noreceived" tabindex="0"><span class="checkmark"></span>No</label>
                                             </div>
                                         </fieldset>
-                                        <div id="newpetradios">
+                                        <div id="newpetradios" role="alert">
                                             <fieldset aria-describedby="responsefile">
                                                 <p id="responsefile">You have indicated that you received the notice of abandonment. A petition to revive must be filed within two months of the issue date of the notice of abandonment and this application has been abandoned for more than two months. Therefore, your option is to file a new application. If you would like us to consider allowing a late petition due to some extraordinary circumstances, you may file a petition to the Director under Trademark Rule 2.146 form and explain the reason why a late petition should be permitted. A petition to the Director will only be granted if there are extraordinary circumstances to justify filing a late petition.</p>
                                                 <div role="radiogroup" class="form-group form-group-md" aria-describedby="responsefile">
@@ -309,7 +309,7 @@
                                                 </div>
                                             </fieldset>
                                         </div>
-                                        <div id="petdiradios">
+                                        <div id="petdiradios" role="alert">
                                             <fieldset aria-describedby="knowledge">
                                                 <p id="knowledge"><span style="color:red;">Need a message here to inform the user that a petition to revive must be filed within two months of actual knowledge that the application is abandoned.</span></p>
                                                 <div role="radiogroup" class="form-group form-group-md" aria-describedby="knowledge">
@@ -317,7 +317,7 @@
                                                 </div>
                                             </fieldset>
                                         </div>
-                                        <div id="receipt">
+                                        <div id="receipt" role="alert">
                                             <fieldset aria-describedby="oa">
                                                 <p class="weight600" id="oa">Did you receive the Notice of Allowance?</p>
                                                 <div role="radiogroup" aria-describedby="oa" class="form-group form-group-md">
@@ -326,8 +326,8 @@
                                                 </div>
                                             </fieldset>
                                         </div>
-                                        <div id="reviveappform">
-                                            <div id="requestnoa">
+                                        <div id="reviveappform" role="alert">
+                                            <div id="requestnoa" role="alert">
                                                 <fieldset aria-label="request new notice of allowance">
                                                 <p class="weight600" id="reqnoa">Would you like UPSTO to issue a new Notice of Allowance?</p>
                                                     <div role="radiogroup" class="form-group form-group-md" aria-describedby="reqnoa">
@@ -336,7 +336,7 @@
                                                     </div>
                                                 </fieldset>
                                             </div>
-                                            <div id="expedite">
+                                            <div id="expedite" role="alert">
                                                 <fieldset aria-label="select petition signature method">
                                                     <div class="card-text noexpand">
                                                         <h2 class="card-title weight600">Petition&#8217;s Signature</h2>
@@ -380,7 +380,7 @@
                                                     </div>
                                                 </fieldset>
                                             </div><!--//expedite-->
-                                            <div id="fees">
+                                            <div id="fees" role="alert">
                                                 <fieldset aria-label="fees agreement">
                                                 <p class="weight600" id="agreefee">Do you want to file a Statement of Use with the fees for the missing Extension Request that must be filed directly within this form?</p>
                                                     <div role="radiogroup" class="form-group form-group-md" aria-describedby="agreefee">
@@ -389,7 +389,7 @@
                                                     </div>
                                                 </fieldset>
                                             </div>
-                                            <div id="xreq">
+                                            <div id="xreq" role="alert">
                                                 <fieldset aria-label="file a request for extension">
                                                     <div class="card-text noexpand">
                                                         <h2 class="card-title weight600">Extension Request</h2>
@@ -401,7 +401,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div id="souquestion">
+                                                    <div id="souquestion" role="alert">
                                                         <p class="weight600" id="filesou">Did you want to file a Statement of Use?</p>
                                                         <div role="radiogroup" class="form-group form-group-md" aria-describedby="filesou">
                                                             <label for="inlineRadio0106" class="radio-inline radiocontainer"><input type="radio" name="souradio" id="inlineRadio0106" value="yesou" tabindex="0"><span class="checkmark"></span>Yes</label>
