--- a/statement_of_use.html
+++ b/statement_of_use.html
@@ -272,7 +272,7 @@
                                                     <label for="firstconnection-date" class="matchlabelheighttwo">When did you first use the mark in Commerce? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used in commerce, such as commerce between states or between the United States and another country." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduced Fee</span></label>
                                                     <input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value="">
                                                 </div>
-                                                <div class="col-xs-12 form-group form-group-md individualspecimen">
+                                                <div class="col-xs-12 form-group form-group-md individualspecimen" role="alert">
                                                     <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenone" tabindex="0" aria-labelledby="individualspecimen_1" id="indspec">
                                                     <label class="form-check-label form-check" for="indspec" id="individualspecimen_1"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                 </div>
