--- a/marks_design_with_text_disclaimer_M2.html
+++ b/marks_design_with_text_disclaimer_M2.html
@@ -236,7 +236,7 @@
                                                       <label for="inlineRadio09" class="radio-inline radiocontainer">Yes<input type="radio" name="disclaimradio" id="inlineRadio09" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                       <label for="inlineRadio010" class="radio-inline radiocontainer">No<input type="radio" name="disclaimradio" id="inlineRadio010" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                     </div><!--END radiogroup-->
-                                                    <div id="yesdisclaimer" class="form-group"><!--toggle 'yes' radio-->
+                                                    <div id="yesdisclaimer" class="form-group" role="alert"><!--toggle 'yes' radio-->
                                                         <div class="row disclaim">
                                                         	<div class="form-group form-group-md col-xs-9">
                                                                 <div class="control-label">
@@ -285,7 +285,7 @@
                                                       <label for="inlineRadio011" class="radio-inline radiocontainer">Yes<input type="radio" name="priorradio" id="inlineRadio011" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                       <label for="inlineRadio012" class="radio-inline radiocontainer">No<input type="radio" name="priorradio" id="inlineRadio012" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                     </div><!--END radiogroup-->
-                                                    <div id="yesprior" role="region" aria-labelledby="prioreg" class="form-group form-group-md">
+                                                    <div id="yesprior" role="region alert" aria-labelledby="prioreg" class="form-group form-group-md">
                                                         <div class="row docket">
                                                             <div class="form-group form-group-md col-xs-9">
                                                                 <label for="yesprior">Enter prior U.S. registration numbers. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
@@ -328,7 +328,7 @@
                                                           <label for="inlineRadio013" class="radio-inline radiocontainer">Yes<input type="radio" name="meaningradio" id="inlineRadio013" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                           <label for="inlineRadio014" class="radio-inline radiocontainer">No<input type="radio" name="meaningradio" id="inlineRadio014" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
-                                                        <div id="yesmeaning" role="region" class="form-horizontal form-group form-group-md">
+                                                        <div id="yesmeaning" role="region alert" class="form-horizontal form-group form-group-md">
                                                             <div class="col-xs-12 col-md-4">
                                                                 <label for="yesmeaning" class="sr-only">What has meaning or significance?</label>
                                                                 <input type="text" class="form-control" id="yesmeaning">
