--- a/marks_design_with_text_uploaded_M5.html
+++ b/marks_design_with_text_uploaded_M5.html
@@ -246,14 +246,14 @@
                                                             <label for="inlineRadio1" class="radio-inline radiocontainer">Yes<input type="radio" name="coloradio" id="inlineRadio1" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                             <label for="inlineRadio2" class="radio-inline radiocontainer">No<input type="radio" name="coloradio" id="inlineRadio2" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
-                                                        <div id="yescolorclaim"><!--toggle 'yes' radio-->
+                                                        <div id="yescolorclaim" role="alert"><!--toggle 'yes' radio-->
                                                             <label for="ta3" class="save">Identify the colors in your mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label> 
                                                             <textarea id="ta3" rows="3" class="form-control"></textarea>
                                                             <h3 class="weight600">Mark Description</h3>
                                                             <label for="ta2" class="save">Enter the description of the mark including the location of the colors. <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>  
                                                             <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                                         </div>
-                                                        <div id="nocolorclaim" class="form-group form-group-md"><!--toggle 'no' radio-->
+                                                        <div id="nocolorclaim" class="form-group form-group-md" role="alert"><!--toggle 'no' radio-->
                                                             <img src="images/designonly_alt1.gif" class="img-thumbnail" alt="your black and white mark"> 
                                                             <div class="bwimage">
                                                                 <input class="form-check-input checkmark" type="checkbox" value="accept B W mark" tabindex="0" aria-labelledby="acceptmark" id="bwmark">
@@ -292,7 +292,7 @@
                                                             <label for="inlineRadio3" class="radio-inline radiocontainer">Yes<input type="radio" name="foreignradio" id="inlineRadio3" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                             <label for="inlineRadio4" class="radio-inline radiocontainer">No<input type="radio" name="foreignradio" id="inlineRadio4" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
-                                                        <div id="yestranslation" aria-labelledby="translate"><!--toggle 'yes' radio-->
+                                                        <div id="yestranslation" aria-labelledby="translate" role="alert"><!--toggle 'yes' radio-->
                                                             <div class="col-xs-12 form-group form-group-md holdsatranslate">
                                                                 <h3 class="weight600" id="translate">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></h3>
                                                                 <div class="row addtranslation">
@@ -352,7 +352,7 @@
                                                           <label for="inlineRadio5" class="radio-inline radiocontainer">Yes<input type="radio" name="nonlatradio" id="inlineRadio5" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                           <label for="inlineRadio6" class="radio-inline radiocontainer">No<input type="radio" name="nonlatradio" id="inlineRadio6" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
-                                                        <div id="yestransliteration" aria-labelledby="translitp"><!--toggle 'yes' radio-->
+                                                        <div id="yestransliteration" aria-labelledby="translitp" role="alert"><!--toggle 'yes' radio-->
                                                           	<div class="col-xs-12 form-group form-group-md holdsatransliterate">
                                                             	<h3 class="weight600" id="translitp">Enter the transliteration of the mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></h3>
                                                             	<div class="row addtransliteration">
@@ -414,7 +414,7 @@
                                                             <label for="inlineRadio7" class="radio-inline radiocontainer">Yes<input type="radio" name="npsradio" id="inlineRadio7" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                             <label for="inlineRadio8" class="radio-inline radiocontainer">No<input type="radio" name="npsradio" id="inlineRadio8" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
-                                                        <div id="yesnps" role="region" aria-labelledby="translit">
+                                                        <div id="yesnps" role="region alert" aria-labelledby="translit">
                                                         	<p id="whichnps">Identify which of the following it contains:</p> 
                                                             <input class="form-check-input checkmark" type="checkbox" value="name" tabindex="0" aria-labelledby="checkname" id="namechecked">
                                                             <label class="form-check-label form-check" for="namechecked" id="checkname"><span class="radio notspecial">Name</span></label>
