--- a/marks_standard_character.html
+++ b/marks_standard_character.html
@@ -262,7 +262,7 @@
                                                             <label for="inlineRadio3" class="radio-inline radiocontainer">Yes<input type="radio" name="foreignradio" id="inlineRadio3" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                             <label for="inlineRadio4" class="radio-inline radiocontainer">No<input type="radio" name="foreignradio" id="inlineRadio4" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
-                                                        <div id="yestranslation" aria-labelledby="translate"><!--toggle 'yes' radio-->
+                                                        <div id="yestranslation" aria-labelledby="translate" role="alert"><!--toggle 'yes' radio-->
                                                             <div class="col-xs-12 form-group form-group-md holdsatranslate">
                                                                 <h3 class="weight600" id="translate">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></h3>
                                                                 <div class="row addtranslation">
@@ -321,7 +321,7 @@
                                                             <label for="inlineRadio7" class="radio-inline radiocontainer">Yes<input type="radio" name="npsradio" id="inlineRadio7" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                             <label for="inlineRadio8" class="radio-inline radiocontainer">No<input type="radio" name="npsradio" id="inlineRadio8" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
-                                                        <div id="yesnps" role="region" aria-labelledby="translit">
+                                                        <div id="yesnps" role="region alert" aria-labelledby="translit">
                                                             <p id="whichnps">Identify which of the following it contains:</p> 
                                                             <input class="form-check-input checkmark" type="checkbox" value="name" tabindex="0" aria-labelledby="checkname" id="namechecked">
                                                             <label class="form-check-label form-check" for="namechecked" id="checkname"><span class="radio notspecial">Name</span></label>
