--- a/petition_torevive_ROA_S3_(lessthan6month-1stclaim_nonfinal).html
+++ b/petition_torevive_ROA_S3_(lessthan6month-1stclaim_nonfinal).html
@@ -286,7 +286,7 @@
                                                 <label for="inlineRadio085" class="radio-inline radiocontainer"><input type="radio" name="actionradio" id="inlineRadio085" value="noreceived" tabindex="0"><span class="checkmark"></span>No</label>
                                             </div>
                                         </fieldset>
-                                        <div id="newpetradios">
+                                        <div id="newpetradios" role="alert">
                                             <fieldset aria-describedby="responsefile">
                                                 <p id="responsefile">You have indicated that you received the notice of abandonment. A petition to revive must be filed within two months of the issue date of the notice of abandonment and this application has been abandoned for more than two months. Therefore, your option is to file a new application. If you would like us to consider allowing a late petition due to some extraordinary circumstances, you may file a petition to the Director under Trademark Rule 2.146 form and explain the reason why a late petition should be permitted. A petition to the Director will only be granted if there are extraordinary circumstances to justify filing a late petition.</p>
                                                 <div role="radiogroup" class="form-group form-group-md" aria-describedby="responsefile">
@@ -295,7 +295,7 @@
                                                 </div>
                                             </fieldset>
                                         </div>
-                                        <div id="twomonths">
+                                        <div id="twomonths" role="alert">
                                             <fieldset aria-labelledby="filenow">
                                                 <p class="weight600" id="filenow">Are you filing this petition within two months of actual knowledge that the application was abandoned?</p>
                                                 <div role="radiogroup" class="form-group form-group-md" aria-describedby="filenow">
@@ -304,7 +304,7 @@
                                                 </div>
                                             </fieldset>
                                         </div>
-                                        <div id="petdiradios">
+                                        <div id="petdiradios" role="alert">
                                             <fieldset aria-describedby="knowledge">
                                                 <p id="knowledge"><span style="color:red;">Need a message here to inform the user that a petition to revive must be filed within two months of actual knowledge that the application is abandoned.</span></p>
                                                 <div role="radiogroup" class="form-group form-group-md" aria-describedby="knowledge">
@@ -312,7 +312,7 @@
                                                 </div>
                                             </fieldset>
                                         </div>
-                                        <div id="receipt">
+                                        <div id="receipt" role="alert">
                                             <fieldset aria-describedby="oa">
                                                 <p class="weight600" id="oa">Did you receive the <a href="images/revise_s1.pdf" target="_blank">office action<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>?</p>
                                                 <div role="radiogroup" aria-describedby="oa" class="form-group form-group-md">
@@ -321,7 +321,7 @@
                                                 </div>
                                             </fieldset>
                                         </div>
-                                        <div id="received">
+                                        <div id="received" role="alert">
                                             <fieldset aria-label="select petition signature method">
                                                 <div class="card-text noexpand">
                                                     <h2 class="card-title weight600">Petition&#8217;s Signature</h2>
@@ -416,7 +416,7 @@
                                                 </div>
                                             </fieldset>
                                         </div>
-                                        <div id="reviveappformradios">
+                                        <div id="reviveappformradios" role="alert">
                                             <fieldset aria-label="file a response">
                                                 <p class="weight600"id="filenow">Do you want to file a response to the office action now to avoid delays and expedite the processing of your application?</p>
                                                 <div role="radiogroup" class="form-group form-group-md" aria-describedby="filenow">
@@ -425,7 +425,7 @@
                                                 </div>
                                             </fieldset>
                                         </div>
-                                        <div id="expedite">
+                                        <div id="expedite" role="alert">
                                             <fieldset aria-label="select petition signature method">
                                                 <div class="card-text noexpand">
                                                     <h2 class="card-title weight600">Petition&#8217;s Signature</h2>
